# KDARecog

./: .gitignore  Net.cnn.val.pt  Net.mlp.val.pt  Net.pt  Net.val.pt  README.md  data-13.tar.xz  data-stat.py  dataset.py  make-data.py  model.py  pyproject.toml  recog.py  split-validation-set.py  stats.npy  train.py
